# GCOPTER

./: .gitignore  README.md
gcopter/: package.xml
gcopter/include/gcopter/: firi.hpp  gcopter.hpp  lbfgs.hpp  trajectory.hpp
gcopter/src/: global_planning.cpp
px4_controller/: CMakeLists.txt  package.xml
px4_controller/config/: GeometricController.cfg  ctrl_param_fpv.yaml  multi_points_planning.yaml  obstacle_map.rviz  obstacle_map.yaml  race_track_planning.rviz  race_track_planning.yaml  simple_planning.rviz  simple_planning.yaml
px4_controller/gt_pcd/: drone_race_track_gate_only.pcd
px4_controller/include/: controller.h  ctrl_param.h  geometric_controller.h  input.h  nonlinear_attitude_control.h  nonlinear_geometric_control.h  px4_control.h  visualization.hpp
px4_controller/launch/: env.launch  geometric_controller.launch  mockamap_env.launch  multi_points_planning.launch  obstacle_map_env.launch  obstacle_map_planning.launch  position_controller.launch  px4_ctrl.launch  race_track_env.launch  race_track_planning.launch  simple_planning.launch
px4_controller/models/obs_box/: model.config  model.sdf
px4_controller/models/obs_cylinder/: model.sdf
px4_controller/src/: controller.cpp  geometric_controller.cpp  geometric_controller_node.cpp  hovthrkf.cpp  multi_points_planning.cpp  nonlinear_attitude_control.cpp  nonlinear_geometric_control.cpp  position_controller_node.cpp  px4_control_node.cpp  race_track_planning.cpp  simple_planning.cpp
px4_controller/src/utils/: pcd_to_pointcloud.cpp
px4_controller/srv/: Command.srv
px4_controller/worlds/: obstacle_100x100.world
